--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <li>Information about these can also be found in The States Voter Guide: <a href="https://ncvoter.branch.vote/ballot">https://ncvoter.branch.vote/ballot</a></li>
                         </ul>
                     </li>
-                    <li><img style="font-family: inherit; font-size: 1rem;" src="images/Screenshot 2024-11-04 at 10.55.38 AM.png" alt="Screenshot 2024-11-04 at 10.55.38 AM.png" width="450" height="366" data-api-endpoint="https://uncc.instructure.com/api/v1/courses/231107/files/26752645" data-api-returntype="File" /></li>
+                    <li style="list-style-type: none;"><img style="display: block; margin-left: auto; margin-right: auto; padding: 10px 0" src="images/Screenshot 2024-11-04 at 10.55.38 AM.png" alt="Screenshot 2024-11-04 at 10.55.38 AM.png" width="450" height="366" data-api-endpoint="https://uncc.instructure.com/api/v1/courses/231107/files/26752645" data-api-returntype="File" /></li>
                 </ul>
             </li>
         </ul>
