--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </ul>
             </li>
         </ul>
-        <p><img style="max-width:95%; height: 100%" src="images/Screenshot 2024-11-04 at 10.23.45 AM.png" alt="Screenshot 2024-11-04 at 10.23.45 AM.png"/></p>
+        <p><img style="max-width:95%; object-fit: contain;" src="images/Screenshot 2024-11-04 at 10.23.45 AM.png" alt="Screenshot 2024-11-04 at 10.23.45 AM.png"/></p>
 
     </div>
     <h1><br />Know Before U Go:</h1>
