--- a/index.html
+++ b/index.html
@@ -38,15 +38,16 @@
                 <ul>
                     <li><em><span style="text-decoration: underline;"><strong>A custom sample/practice ballot will be available when you check your registration status</strong></span></em>
                         <ul>
-                            <li style="list-style-type: none;"><img style="display: block; margin-left: auto; margin-right: auto; padding: 10px 0" src="images/Screenshot 2024-11-04 at 10.38.42 AM.png" alt="Screenshot 2024-11-04 at 10.38.42 AM.png" width="523" height="400" /></li>
+                            <li style="list-style-type: none;"><img style="display: block; margin-left: auto; margin-right: auto; padding: 10px 0; width: 50vw; height: 100%" src="images/Screenshot 2024-11-04 at 10.38.42 AM.png" alt="Screenshot 2024-11-04 at 10.38.42 AM.png"/></li>
                         </ul>
                     </li>
                     <li><strong><span style="text-decoration: underline;">Use an online voter guide to collect information on candidates in a single place.</span></strong>
                         <ul>
                             <li>For a smoother and fast voting process <em><strong>consider filling out your sample ballot ahead of time</strong></em> so when you are in the voting booth all you have to do is copy over your choices</li>
                             <li>The States Voter Guide: <a href="https://ncvoter.branch.vote/ballot">https://ncvoter.branch.vote/ballot</a></li>
-                            <li style="list-style-type: none;"><img style="display: block; margin-left: auto; margin-right: auto; padding: 10px 0" src="images/Screenshot 2024-11-04 at 10.42.15 AM.png" alt="Screenshot 2024-11-04 at 10.42.15 AM.png" width="600" height="370" /></li>
-                            <li style="display: flex;justify-content: center; gap: 10px; padding-bottom: 10px; list-style-type: none;"><img src="images/Screenshot 2024-11-04 at 10.45.06 AM.png" alt="Screenshot 2024-11-04 at 10.45.06 AM.png" width="470" height="306"/><img src="images/Screenshot 2024-11-04 at 10.45.16 AM.png" alt="Screenshot 2024-11-04 at 10.45.16 AM.png" width="450" height="306" /></li>
+                            <li style="list-style-type: none;"><img style="display: block; margin-left: auto; margin-right: auto; padding: 10px 0; width: 50vw; height: 100%" src="images/Screenshot 2024-11-04 at 10.42.15 AM.png" alt="Screenshot 2024-11-04 at 10.42.15 AM.png"/></li>
+                            <li style="display: flex;justify-content: center; gap: 10px; padding-bottom: 10px; list-style-type: none;"><img style="width: 50vw; height: 100%" src="images/Screenshot 2024-11-04 at 10.45.06 AM.png" alt="Screenshot 2024-11-04 at 10.45.06 AM.png"/></li>
+                            <li style="display: flex;justify-content: center; gap: 10px; padding-bottom: 10px; list-style-type: none;"><img style="width: 50vw; height: 100%" src="images/Screenshot 2024-11-04 at 10.45.16 AM.png" alt="Screenshot 2024-11-04 at 10.45.16 AM.png" width="450" height="306" /></li>
                         </ul>
                     </li>
                 </ul>
@@ -58,7 +59,7 @@
                             <li>Information about these can also be found in The States Voter Guide: <a href="https://ncvoter.branch.vote/ballot">https://ncvoter.branch.vote/ballot</a></li>
                         </ul>
                     </li>
-                    <li style="list-style-type: none;"><img style="display: block; margin-left: auto; margin-right: auto; padding: 10px 0" src="images/Screenshot 2024-11-04 at 10.55.38 AM.png" alt="Screenshot 2024-11-04 at 10.55.38 AM.png" width="450" height="366" data-api-endpoint="https://uncc.instructure.com/api/v1/courses/231107/files/26752645" data-api-returntype="File" /></li>
+                    <li style="list-style-type: none;"><img style="display: block; margin-left: auto; margin-right: auto; padding: 10px 0; width: 50vw; height: 100%" src="images/Screenshot 2024-11-04 at 10.55.38 AM.png" alt="Screenshot 2024-11-04 at 10.55.38 AM.png"/></li>
                 </ul>
             </li>
         </ul>
