Wrong File in index

--- a/index.html
+++ b/index.html
@@ -1,78 +1,74 @@
-@font-face {
-font-family: "normal";
-src: url("fonts/normal.ttf") format("truetype");
-font-weight: normal;
-font-style: normal;
-}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Vote</title>
+    <link rel="stylesheet" href="css.css">
+</head>
+<body>
+<div class="wrapper">
+    <img class="info-image" style="max-width: 25vw" src="images/Screenshot 2024-11-04 at 11.15.42 AM.png" alt="Screenshot of voting eligibility steps"/>
+    <h1>Am I Eligible?</h1>
+    <div class="info-section">
+        <ul>
+            <li><strong>You must have already registered with the NC Board of Elections to vote on Election Day (Tuesday Nov 5th).</strong>
+                <ul>
+                    <li>To check your registration status, visit the <a href="https://vt.ncsbe.gov/RegLkup/">NC Board of Elections Registration Lookup</a>.
+                        <ul>
+                            <li><em><strong>Keep this tab open, as we will reference it multiple times.</strong></em></li>
+                        </ul>
+                    </li>
+                    <li>Same day registration is only allowed for early voting.</li>
+                </ul>
+            </li>
+            <li><strong>If registered, you must vote at your designated polling location(s)</strong>
+                <ul>
+                    <li>Your polling location will be listed when you check your registration status.</li>
+                </ul>
+            </li>
+        </ul>
+        <img class="info-image" src="images/Screenshot 2024-11-04 at 10.23.45 AM.png" alt="Screenshot of voting eligibility steps"/>
+    </div>
 
-@font-face {
-font-family: "bold";
-src: url("fonts/bold.ttf") format("truetype");
-font-weight: bold;
-font-style: normal;
-}
+    <h1>Know Before You Go</h1>
+    <div class="info-section">
+        <ul>
+            <li>Regardless of who you vote for it is important to know which positions will be on your ballot and which candidate(s) most closely align with your political beliefs before entering the voting booth.
+                <ul>
+                    <li>A custom sample/practice ballot is available when you check your registration status.</li>
+                </ul>
+            </li>
+        </ul>
+        <img class="info-image" src="images/Screenshot 2024-11-04 at 10.38.42 AM.png" alt="Screenshot of sample ballot"/>
+        <ul>
 
-body {
-display: flex;
-justify-content: center;
-align-items: center;
-padding: 20px;
-background-image: url('images/photo-1523821741446-edb2b68bb7a0.jpeg');
-background-size: cover;
-font-family: sans-serif;
-color: #333;
-}
+            <li style="padding-top: 20px">For a smoother and fast voting process consider filling out your sample ballot ahead of time so when you are in the voting booth all you have to do is copy over your choices</li>
+            <li style="padding-bottom: 20px">The States Voter Guide: <a href="https://ncvoter.branch.vote/ballot">https://ncvoter.branch.vote/ballot</a></li>
+        </ul>
+        <img class="info-image" src="images/Screenshot 2024-11-04 at 10.45.06 AM.png" alt="Screenshot of sample ballot"/>
+        <img class="info-image" src="images/Screenshot 2024-11-04 at 10.45.16 AM.png" alt="Screenshot of sample ballot"/>
+        <ul>
+            <li style="padding: 20px 0"><strong>Understand the referenda on the ballot.</strong>
+                <ul>
+                    <li>Referenda can be confusing, so make sure to research their meanings before you vote.</li>
+                </ul>
+            </li>
+        </ul>
+        <img class="info-image" src="images/Screenshot 2024-11-04 at 10.55.38 AM.png" alt="Screenshot of sample ballot"/>
+    </div>
 
-.wrapper {
-max-width: 800px;
-width: 100%;
-background: rgba(255, 255, 255, 0.9);
-border-radius: 10px;
-box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-padding: 20px;
-}
-
-h1 {
-font-family: "bold", sans-serif;
-font-size: 2em;
-text-align: center;
-margin-top: 0;
-color: #2a6fa8;
-}
-
-.info-section {
-padding: 20px;
-background-color: #f9f9f9;
-border: 1px solid #ddd;
-border-radius: 8px;
-margin: 20px 0;
-box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-}
-
-ul {
-list-style-type: disc;
-margin-left: 20px;
-line-height: 1.6;
-}
-
-li strong {
-color: #333;
-}
-
-a {
-color: #2a6fa8;
-text-decoration: none;
-font-weight: bold;
-}
-
-a:hover {
-text-decoration: underline;
-}
-
-.info-image {
-display: block;
-max-width: 100%;
-margin: 20px auto;
-border-radius: 8px;
-box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-}
+    <h1>Time to Vote!</h1>
+    <div class="info-section">
+        <ul>
+            <li><em>Ensure you’re heading to the correct polling location.</em></li>
+            <li><strong>Bring your ID!</strong> You will need a physical ID to vote in the NC General election.
+                <ul>
+                    <li>Physical (not digital) student IDs are accepted. For more information, visit the <a href="https://www.ncsbe.gov/voting/voter-id#required">NC Voter ID Information Page</a>.</li>
+                </ul>
+            </li>
+            <li><em>Take advantage of discounted Lyft or Uber rides to and from polling places on Nov 5th.</em></li>
+        </ul>
+    </div>
+</div>
+</body>
+</html>
