--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="wrapper">
     <img class="info-image" style="max-width: 25vw" src="images/Screenshot 2024-11-04 at 11.15.42 AM.png" alt="Screenshot of voting eligibility steps"/>
-    <h1>Am I Eligible?</h1>
+    <h1>Am I Eligible?!</h1>
     <div class="info-section">
         <ul>
             <li><strong>You must have already registered with the NC Board of Elections to vote on Election Day (Tuesday Nov 5th).</strong>
